# project_euler

./: .pre-commit-config.yaml  CITATION.cff  Makefile  README.md  setup.cfg
src/notebooks/: main.ipynb  pe353.ipynb  pe41.ipynb  pe42.ipynb  pe43.ipynb  pe44.ipynb  pe45.ipynb
src/project_euler/: __init__.py  primality.py  sequences.py  utilities.py
src/tests/: electron_test.py  prime_test.py
